deck overflow-x fixed

--- a/src/styles2.css
+++ b/src/styles2.css
@@ -487,7 +487,7 @@ body{
     display: flex;
     flex-direction: row;
     gap: 10px;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding-top: 30px;
 }
 
